--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
+		"pug": "^3.0.2",
+		"sass": "^1.62.0",
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.2.0",
+		"svelte-preprocess": "^5.0.3",
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.4",
 		"vite": "^4.2.2",
